# mtxxvideoeditor

./: README.md  build.gradle  settings.gradle
example/: build.gradle
ijk-example/: build.gradle
videoeditor-armv7a/: .gitignore  CMakeLists.txt  build.gradle
videoeditor-armv7a/android-ndk-prof/: CMakeLists.txt
videoeditor-armv7a/cpufeatures/: CMakeLists.txt
videoeditor-armv7a/ffmpeg/: compile.sh  do-compile-ffmpeg.sh  module.sh
videoeditor-armv7a/ffmpeg/fdk-aac-0.1.4/: Makefile  build (可用，4.7M).sh  build.sh  config.status  fdk-aac.pc  libtool
videoeditor-armv7a/ffmpeg/fdk-aac-0.1.4/Android/: .gitignore
videoeditor-armv7a/ffmpeg/fdk-aac-0.1.4/Android/arm/lib/: libfdk-aac.la
videoeditor-armv7a/ffmpeg/fdk-aac-0.1.4/libSYS/src/.deps/: cmdl_parser.Plo  genericStds.Plo
videoeditor-armv7a/ffmpeg/ffmpeg-armv7a/: config.fate  config.h  config.mak  library.mak
videoeditor-armv7a/ffmpeg/ffmpeg-armv7a/libavcodec/: flicvideo.c  g729dec.c  h2645_parse.c  libx264.c  mediacodecdec_common.c  vaapi_decode.c  vaapi_encode.c
videoeditor-armv7a/ffmpeg/ffmpeg-armv7a/libavfilter/: buffersrc.c  graphparser.c  src_movie.c
videoeditor-armv7a/ffmpeg/ffmpeg-armv7a/libavutil/: frame.c  frame.h
videoeditor-armv7a/ffmpeg/ndkbuild/: .gitignore
videoeditor-armv7a/ffmpeg/ndkbuild/jni/: Android.mk
videoeditor-armv7a/ffmpeg/output/armv7a/: config.fate  config.h  config.mak
videoeditor-armv7a/ffmpeg/output/armv7a/include/libavcodec/: avcodec.h
videoeditor-armv7a/ffmpeg/output/armv7a/include/libavformat/: avformat.h
videoeditor-armv7a/ffmpeg/output/armv7a/include/libavutil/: ffversion.h  mem.h
videoeditor-armv7a/ffmpeg/output/armv7a/include/libffmpeg/: config.h
videoeditor-armv7a/ffmpeg/output/armv7a/include/libswresample/: swresample.h
videoeditor-armv7a/ffmpeg/output/armv7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
videoeditor-armv7a/ffmpeg/x264/: config.sh
videoeditor-armv7a/ijkj4a/: Android.mk  CMakeLists.txt
videoeditor-armv7a/ijkplayer/: CMakeLists.txt  config.h  ff_ffaudio_resample.c  ff_ffaudio_resample.h  ff_ffeditor.c  ff_ffeditor.h  ff_ffmsg.h  ff_ffmsg_queue.h  ff_ffmux.c  ff_ffmux.h  ff_ffmux_hard.c  ff_ffmux_hard.h  ff_ffmux_soft.c  ff_ffmux_soft.h  ff_ffpipeline.c  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ff_mediacodec.c  ff_mediacodec.h  ff_mediacodec_common.c  ff_mediacodec_common.h  ijkmeta.h  ijkplayer.c  ijkplayer.h  ijkversion.h
videoeditor-armv7a/ijkplayer/android/: ffmpeg_api_jni.c  ffmpeg_api_jni.h  gl3stub.c  gl_jni.c  gl_jni.h  gl_util.c  gl_util.h  ijkplayer_android.c  ijkplayer_android.h  ijkplayer_jni.c
videoeditor-armv7a/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipenode_android_mediacodec_vdec.c
videoeditor-armv7a/ijkplayer/pipeline/: ffpipeline_ffplay.c
videoeditor-armv7a/ijksdl/: Android.mk  CMakeLists.txt  ijksdl_def.h  ijksdl_egl.c  ijksdl_gles2.h  ijksdl_mutex.c  ijksdl_mutex.h  ijksdl_thread.c  ijksdl_timer.c  ijksdl_vout.h
videoeditor-armv7a/ijksdl/android/: ijksdl_android_jni.c  ijksdl_codec_android_mediadef.c  ijksdl_vout_android_nativewindow.c
videoeditor-armv7a/ijksdl/gles2/: CSAudioEncoder.cpp  CSAudioEncoder.h  CSVideoEncoder.cpp  CSVideoEncoder.h  common.c  ff_audio_converter.c  ff_audio_converter.h  ff_converter.c  ff_converter.h  ff_ffmusic_decode.c  ff_ffmusic_decode.h  ff_ffmux.c  ff_ffmux.h  ff_ffmux_hard.c  ff_ffmux_hard.h  ff_ffmux_soft.c  ff_ffmux_soft.h  ff_print_util.c  ff_print_util.h  gl3stub.h  glUtil.c  glUtil.h  gl_util.c  gl_util.h  internal.h  renderer.c  renderer_yuv420p.c  shader.c
videoeditor-armv7a/ijksdl/gles2/fsh/: yuv420pmeitu.fsh.c
videoeditor-armv7a/ijksdl/gles2/test/: test_opengl.c
videoeditor-armv7a/ijksdl/gles2/vsh/: mvp.vsh.c
videoeditor-armv7a/ijksoundtouch/: Android.mk  CMakeLists.txt
videoeditor-armv7a/ijkyuv/: CMakeLists.txt
videoeditor-armv7a/ijkyuv/include/libyuv/: convert.h
videoeditor-armv7a/ijkyuv/source/: convert_to_i420.cc
videoeditor-armv7a/record/: cmake记录  c语言  editor(avfilter)  editor(opengl)  editor记录  ffmepg记录  ijk播放原理梳理  ijk编译记录  ijk记录  todo
videoeditor-armv7a/src/main/: AndroidManifest.xml
videoeditor-armv7a/src/main/assets/home/: home.fs  home.vs  homemeitu.fs
videoeditor-armv7a/src/main/res/values/: strings.xml
videoeditor-generate_so/: .gitignore  CMakeLists.txt  build.gradle
videoeditor-generate_so/android-ndk-prof/: CMakeLists.txt
videoeditor-generate_so/cpufeatures/: CMakeLists.txt
videoeditor-generate_so/ffmpeg/: CMakeLists.txt  compile.sh  do-compile-ffmpeg.sh  ffmpeg.c  module.sh
videoeditor-generate_so/ffmpeg/ffmpeg-armv7a/: .gitignore  config.fate  config.h  config.mak
videoeditor-generate_so/ffmpeg/ffmpeg-armv7a/libavcodec/: libavcodec.pc
videoeditor-generate_so/ffmpeg/ffmpeg-armv7a/libavfilter/: libavfilter.pc
videoeditor-generate_so/ffmpeg/ffmpeg-armv7a/libavformat/: libavformat.pc
videoeditor-generate_so/ffmpeg/ffmpeg-armv7a/libavutil/: libavutil.pc
videoeditor-generate_so/ffmpeg/ffmpeg-armv7a/libswresample/: libswresample.pc
videoeditor-generate_so/ffmpeg/ffmpeg-armv7a/libswscale/: libswscale.pc
videoeditor-generate_so/ffmpeg/ndkbuild/jni/: Android.mk
videoeditor-generate_so/ffmpeg/output/armv5/: config.asm  config.fate  config.h  config.mak
videoeditor-generate_so/ffmpeg/output/armv7a/: config.fate  config.h  config.mak
videoeditor-generate_so/ffmpeg/output/x86/: config.fate  config.h  config.mak
videoeditor-generate_so/ijkj4a/: CMakeLists.txt  test.c
videoeditor-generate_so/ijkj4a/java/: CMakeLists.txt
videoeditor-generate_so/ijkplayer/: Android.mk  CMakeLists.txt  ff_ffinc.h  ff_ffpipeline.c  ff_ffplay.c
videoeditor-generate_so/ijksdl/: CMakeLists.txt  test.c
videoeditor-generate_so/ijksoundtouch/: CMakeLists.txt
videoeditor-generate_so/ijkyuv/: CMakeLists.txt
videoeditor-generate_so/src/main/: AndroidManifest.xml
videoeditor-generate_so/src/main/cpp/: native-lib.cpp
videoeditor-generate_so/src/main/res/layout/: activity_main.xml
videoeditor-generate_so/src/main/res/values/: strings.xml
(+68 files in other folders)
