
cmake_minimum_required(VERSION 3.4.1)

add_subdirectory(${CMAKE_SOURCE_DIR}/cpufeatures)

add_subdirectory(${CMAKE_SOURCE_DIR}/ijkj4a)

add_subdirectory(${CMAKE_SOURCE_DIR}/ijkyuv)

add_subdirectory(${CMAKE_SOURCE_DIR}/ijksdl)

add_subdirectory(${CMAKE_SOURCE_DIR}/android-ndk-prof)

add_subdirectory(${CMAKE_SOURCE_DIR}/ijksoundtouch)

add_subdirectory(${CMAKE_SOURCE_DIR}/ijkplayer)